--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,18 @@
   height: 0;
 }
 
+/* Custom Clerk styles */
+.cl-formButtonPrimary {
+  font-size: 14px;
+  text-transform: none;
+  background-color: #611bbd;
+}
+
+.cl-formButtonPrimary:hover,
+.cl-formButtonPrimary:focus,
+.cl-formButtonPrimary:active {
+  background-color: #49247a;
+}
 /* Custom image styles */
 
 .ProseMirror img {
